--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common
-        curl  -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -
-        sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+        sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
         sudo apt update
-        sudo apt install -y docker-ce
+        sudo apt install -y docker-ce docker-ce-cli containerd.io
         
     - name: Build docker container
       run: |
