--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: $GITHUB_WORKSPACE/build/vyos-$VERSION-standard.iso
+        asset_path: build/vyos-$VERSION-standard.iso
         asset_name: vyos-standard.iso
         asset_content_type: application/zip
           
@@ -88,6 +88,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: $GITHUB_WORKSPACE/build/vyos-$VERSION-aws.iso
+        asset_path: build/vyos-$VERSION-aws.iso
         asset_name: vyos-aws.iso
         asset_content_type: application/zip
