--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,10 @@ jobs:
 #      run: |
 #        cd $GITHUB_WORKSPACE
 #        docker build -t vyos/vyos-build docker
+
+    - name: Set xtrace
+      run: |
+        set -o xtrace
         
     - name: Pull docker container
       run: |
@@ -58,7 +62,13 @@ jobs:
     - name: Build AWS iso
       run: |
         docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-aws --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make AWS; sudo mv build/live-image-amd64.hybrid.iso build/vyos-$VERSION-aws.iso"
-        
+ 
+    - name: Show build director
+      run: |
+        pwd
+        find build -ls
+        find $GITHUB_WORKSPACE/build
+ 
     - name: Create release
       id: create_release
       uses: actions/create-release@v1
