--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,20 +31,12 @@ jobs:
         sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
         sudo apt update
         sudo apt install -y docker-ce docker-ce-cli containerd.io
-        
-#    - name: Build docker container
-#      run: |
-#        cd $GITHUB_WORKSPACE
-#        docker build -t vyos/vyos-build docker
 
-    - name: Set xtrace
-      run: |
-        set -o xtrace
-        
     - name: Pull docker container
       run: |
-        cd $GITHUB_WORKSPACE
         docker pull vyos/vyos-build:current
+      working-directory: $GITHUB_WORKSPACE
+
         
     - name: Set VERSION variable
       run: |
@@ -58,16 +50,21 @@ jobs:
     - name: Build standard iso
       run: |
         docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-standard --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make iso; sudo mv build/live-image-amd64.hybrid.iso build/vyos-$VERSION-standard.iso"
+      working-directory: $GITHUB_WORKSPACE
         
-    - name: Build AWS iso
-      run: |
-        docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-aws --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make AWS; sudo mv build/live-image-amd64.hybrid.iso build/vyos-$VERSION-aws.iso"
+#    - name: Build AWS iso
+#      run: |
+#        docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-aws --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make AWS; sudo mv build/live-image-amd64.hybrid.iso build/vyos-$VERSION-aws.iso"
+#      working-directory: $GITHUB_WORKSPACE
  
     - name: Show build director
       run: |
+        set -o xtrace
         pwd
         find build -ls
-        find $GITHUB_WORKSPACE/build
+        find $GITHUB_WORKSPACE -ls
+        find . -ls
+      working-directory: $GITHUB_WORKSPACE
  
     - name: Create release
       id: create_release
@@ -87,7 +84,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: build/vyos-${{ env.VERSION }}-standard.iso
+        asset_path: ${{ env.GITHUB_WORKSPACE }}/build/vyos-${{ env.VERSION }}-standard.iso
         asset_name: vyos-standard.iso
         asset_content_type: application/zip
           
@@ -98,6 +95,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: build/vyos-${{ env.VERSION }}-aws.iso
+        asset_path: ${{ env.GITHUB_WORKSPACE }}/build/vyos-${{ env.VERSION }}-aws.iso
         asset_name: vyos-aws.iso
         asset_content_type: application/zip
