--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,21 +48,23 @@ jobs:
 
     - name: Build standard iso
       run: |
+        cd $GITHUB_WORKSPACE
         docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-standard --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make iso; sudo mv build/live-image-amd64.hybrid.iso build/vyos-$VERSION-standard.iso"
-      working-directory: $GITHUB_WORKSPACE
         
 #    - name: Build AWS iso
 #      run: |
+#        cd $GITHUB_WORKSPACE
 #        docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-aws --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make AWS; sudo mv build/live-image-amd64.hybrid.iso build/vyos-$VERSION-aws.iso"
-#      working-directory: $GITHUB_WORKSPACE
  
     - name: Show build director
-      run: |
+      shell: |
         set -o xtrace
         pwd
+        echo $GITHUB_WORKSPACE
         find build -ls
         find $GITHUB_WORKSPACE -ls
         find . -ls
+        find $GITHUB_WORKSPACE/..
       working-directory: $GITHUB_WORKSPACE
  
     - name: Create release
