--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,10 @@ jobs:
     - name: Build standard iso
       run: |
         cd $GITHUB_WORKSPACE
-        docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-standard --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make iso; sudo mv build/live-image-amd64.hybrid.iso build/vyos-$VERSION-standard.iso"
+        docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-standard --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make iso"
+        pwd
+        find . -ls
+        mv $GITHUB_WORKSPACE/build/live-image-amd64.hybrid.iso $GITHUB_WORKSPACE/build/vyos-$VERSION-standard.iso
         
 #    - name: Build AWS iso
 #      run: |
