--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         
     - name: Set VERSION variable
       run: |
-        echo "::set-env name=VERSION::1.3-${GITHUB_HEAD_REF}-$(date +%Y%m%d%H%M)-transficc"
+        echo "::set-env name=VERSION::1.3-rolling-$(date +%Y%m%d%H%M)-transficc"
         
     - uses: actions/upload-artifact@v2
       with:
@@ -51,24 +51,15 @@ jobs:
         cd $GITHUB_WORKSPACE
         docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-standard --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make iso"
         pwd
-        find . -ls
+        ls -l build
+        echo $GITHUB_WORKSPACE
+        ls -l $GITHUB_WORKSPACE/build
         mv $GITHUB_WORKSPACE/build/live-image-amd64.hybrid.iso $GITHUB_WORKSPACE/build/vyos-$VERSION-standard.iso
         
 #    - name: Build AWS iso
 #      run: |
 #        cd $GITHUB_WORKSPACE
 #        docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-aws --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make AWS; sudo mv build/live-image-amd64.hybrid.iso build/vyos-$VERSION-aws.iso"
- 
-    - name: Show build director
-      run: |
-        set -o xtrace
-        pwd
-        echo $GITHUB_WORKSPACE
-        find build -ls
-        find $GITHUB_WORKSPACE -ls
-        find . -ls
-        find $GITHUB_WORKSPACE/..
-      working-directory: $GITHUB_WORKSPACE
  
     - name: Create release
       id: create_release
