--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,11 +55,15 @@ jobs:
         pwd
         ls -l . build
         
-#    - name: Build AWS iso
-#      run: |
-#        cd $GITHUB_WORKSPACE
-#        docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-aws --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make AWS; sudo mv build/live-image-amd64.hybrid.iso build/vyos-$VERSION-aws.iso"
- 
+    - name: Build AWS iso
+      run: |
+        pwd
+        cd $GITHUB_WORKSPACE
+        docker run --rm --privileged -v $GITHUB_WORKSPACE:/vyos -w /vyos vyos/vyos-build:current bash -c "./configure --architecture amd64 --build-by dev@transficc.com --build-type release --version $VERSION-aws --custom-package 'freeipa-client krb5-pkinit lighttpd python3-apt tmux'; sudo make AWS"
+        mv $GITHUB_WORKSPACE/build/live-image-amd64.hybrid.iso vyos-$VERSION-aws.iso
+        pwd
+        ls -l . build
+        
     - name: Create release
       id: create_release
       uses: actions/create-release@v1
