--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,11 +41,6 @@ jobs:
       run: |
         echo "::set-env name=VERSION::1.3-rolling-$(date +%Y%m%d%H%M)-transficc"
         
-    - uses: actions/upload-artifact@v2
-      with:
-        name: vyos-$VERSION
-        path: vyos-iso
-
     - name: Build standard iso
       run: |
         pwd
@@ -55,6 +50,11 @@ jobs:
         pwd
         ls -l . build
         
+    - uses: actions/upload-artifact@v2
+      with:
+        name: vyos-${{ env.VERSION }}-standard.iso
+        path: ./vyos-${{ env.VERSION }}-standard.iso
+
     - name: Build AWS iso
       run: |
         pwd
@@ -64,6 +64,11 @@ jobs:
         pwd
         ls -l . build
         
+    - uses: actions/upload-artifact@v2
+      with:
+        name: vyos-${{ env.VERSION }}-aws.iso
+        path: ./vyos-${{ env.VERSION }}-aws.iso
+
     - name: Create release
       id: create_release
       uses: actions/create-release@v1
