--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,7 +89,7 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
         asset_path: ./vyos-${{ env.VERSION }}-standard.iso
         asset_name: vyos-standard.iso
-        asset_content_type: application/zip
+        asset_content_type: application/x-iso9660-image
           
     - name: Upload AWS release asset
       id: upload-release-asset-2
@@ -100,4 +100,4 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
         asset_path: ./vyos-${{ env.VERSION }}-aws.iso
         asset_name: vyos-aws.iso
-        asset_content_type: application/zip
+        asset_content_type: application/x-iso9660-image
