--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         
     - name: Set VERSION variable
       run: |
-        echo "::set-env name=VERSION::1.3-rolling-$(date +%Y%m%d%H%M)-transficc"
+        echo "VERSION=1.3-rolling-$(date +%Y%m%d%H%M)-transficc" >> $GITHUB_ENV
         
     - name: Build standard iso
       run: |
