[Judd/Damian] add rebased-upstream branch to github actions push trigger

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 # events but only for the current branch
 on:
   push:
-    branches: [ current ]
+    branches: [ current, rebased-upstream ]
   pull_request:
     branches: [ current ]
 
